package java_design_patterns.J_factory.car;

public enum CarType {
    SMALL, SEDAN, LUXURY
}
